<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gladiatus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="email_label">Email:</string>

    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="recover_button">Receive new password</string>

    <string name="login_tab_1">Login</string>
    <string name="login_tab_2">Register</string>
    <string name="login_tab_3">Recover</string>

    <string name="character_creation">Character Creation</string>
    <string name="name_label">Name:</string>
    <string name="image_label">Image:</string>

    <string name="stats_label">Stats:</string>
    <string name="points_left_label">Points left:</string>
    <string name="base_label">Base</string>
    <string name="extra_label">Extra</string>
    <string name="total_label">Total</string>
    <string name="armor_label">Armor:</string>
    <string name="initiative_label">Initiative:</string>

    <string name="health_label">Health:</string>
    <string name="strength_label">Strength:</string>
    <string name="dexterity_label">Dexterity:</string>
    <string name="intelligence_label">Intelligence:</string>
    <string name="willpower_label">Willpower:</string>
    <string name="randomize_button">Reroll Base</string>


    <string name="stat_info_text">Click on each stat for info</string>


    <string name="create_character_button">Create Character</string>


    <string name="minus_label">-</string>
    <string name="plus_label">+</string>


    <string name="starting_skills_label">Starting Skills:</string>
    <string name="left_label">left</string>

    <string name="a_fucking_image">A fucking image</string>

    <string name="level_label">Level</string>
    <string name="xp_label">XP:</string>

    <string name="hit_roll_label">Hit roll:</string>
    <string name="damage_roll_label">Damage roll:</string>
    <string name="weight_label">Weight:</string>
    <string name="gold_label">Gold:</string>


    <string name="character_info_tab_1">Info</string>
    <string name="character_info_tab_2">Training</string>
    <string name="character_info_tab_3">Inventory</string>
    <string name="character_info_tab_4">Abilities</string>

    <string name="currently_training">Currently Training:</string>
    <string name="time_until_next_skill">Time until next skill:</string>
    <string name="current_skill">Current Skill:</string>

    <string name="health_text">Health</string>
    <string name="strength_text">Strength</string>
    <string name="dexterity_text">Dexterity</string>
    <string name="intelligence_text">Intelligence</string>
    <string name="willpower_text">Willpower</string>

    <string name="maintain_text">Maintain current stats</string>
    <string name="maintain_explanation_text">Maintains your current stats and prevents any stat from decaying.</string>


</resources>
