<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/GladiatusColor6">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/health_label"
                android:id="@+id/partial_stats_health_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="37"
                android:id="@+id/character_info_health_text"
                android:layout_marginLeft="10dp"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(+7)"
                android:id="@+id/character_info_health_bonus_text"
                android:textColor="@color/GladiatusHealthGreenColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/character_info_health_training"
                android:layout_marginLeft="20dp"
                android:textColor="@color/GladiatusHealthGreenColor" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/strength_label"
                android:id="@+id/partial_stats_strength_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="19"
                android:id="@+id/character_info_strength_text"
                android:layout_marginLeft="10dp"
                android:gravity="right"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(+5)"
                android:id="@+id/character_info_strength_bonus_text"
                android:textColor="@color/GladiatusHealthGreenColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/character_info_strength_training"
                android:layout_marginLeft="20dp"
                android:textColor="@color/GladiatusHealthGreenColor"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dexterity_label"
                android:id="@+id/partial_stats_dexterity_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="15"
                android:id="@+id/character_info_dexterity_text"
                android:layout_marginLeft="10dp"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(+2)"
                android:id="@+id/character_info_dexterity_bonus_text"
                android:textColor="@color/GladiatusHealthGreenColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/character_info_dexterity_training"
                android:layout_marginLeft="20dp"
                android:textColor="@color/GladiatusHealthGreenColor" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/intelligence_label"
                android:id="@+id/partial_stats_intelligence_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="8"
                android:id="@+id/character_info_intelligence_text"
                android:layout_marginLeft="10dp"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/character_info_intelligence_bonus_text"
                android:textColor="@color/GladiatusHealthGreenColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/character_info_intelligence_training"
                android:layout_marginLeft="20dp"
                android:textColor="@color/GladiatusHealthGreenColor" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/willpower_label"
                android:id="@+id/partial_stats_willpower_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="9"
                android:id="@+id/character_info_willpower_text"
                android:layout_marginLeft="10dp"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/character_info_willpower_bonus_text"
                android:textColor="@color/GladiatusHealthGreenColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/character_info_willpower_training"
                android:layout_marginLeft="20dp"
                android:textColor="@color/GladiatusHealthGreenColor" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/armor_label"
                android:id="@+id/partial_stats_armor_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="16"
                android:id="@+id/character_info_armor_text"
                android:layout_marginLeft="10dp"
                android:gravity="right"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(+6)"
                android:id="@+id/character_info_armor_bonus_text"
                android:textColor="@color/GladiatusHealthGreenColor"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/initiative_label"
                android:id="@+id/partial_stats_initiative_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="8"
                android:id="@+id/character_info_initiative_text"
                android:layout_marginLeft="10dp"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(+3)"
                android:id="@+id/character_info_initiative_bonus_text"
                android:textColor="@color/GladiatusHealthGreenColor"/>
        </TableRow>
    </TableLayout>

</LinearLayout>